# Geovelocity_1

./: .gitignore  README.md  geo_metrics_utils.py  geo_scoring_evaluator.py  main.py  main_1.py  pyproject.toml
src/models/: schemas.py
src/services/: cluster_service.py  scoring_service.py  velocity_service.py
src/utils/: geo_cluster_analyzer.py  geo_metrics_utils.py  geo_scoring_evaluator.py
