[project]
name = "geovelocity-1"
version = "0.1.0"
description = "DESCRIPTION"
authors = [
    {name = "lucamonzon27",email = "lmonzon@airata.net"}
]
readme = "README.md"
requires-python = "3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "shapely (>=2.0,<2.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false